Fix fonts for breadcrumbs and device size input
Both are custom elements that do not have font-size defined.
As such, when the font-size is set via chrome://settings/fonts, it
causes these UI elements to look bad.

Fixed: 1281821
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3347796
Commit-Queue: Yang Guo <yangguo@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>
Commit-Queue: Changhao Han <changhaohan@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/elements/components/elementsBreadcrumbs.css
+++ b/front_end/panels/elements/components/elementsBreadcrumbs.css
@@ -22,6 +22,8 @@
   white-space: nowrap;
   position: relative;
   background: var(--color-background);
+  font-size: inherit;
+  font-family: inherit;
 }
 
 .crumbs-window {
